<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('uom_conversions', function (Blueprint $table) {
            $table->uuid('id')->primary();
            $table->uuid('from_uom_id');
            $table->uuid('to_uom_id');
            $table->decimal('factor', 10, 4);
            $table->timestamps();

            // Foreign key constraints
            $table->foreign('from_uom_id')->references('id')->on('uoms')->onDelete('cascade');
            $table->foreign('to_uom_id')->references('id')->on('uoms')->onDelete('cascade');

            // Unique constraint to prevent duplicate conversions
            $table->unique(['from_uom_id', 'to_uom_id']);

            // Indexes for performance
            $table->index('from_uom_id');
            $table->index('to_uom_id');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('uom_conversions');
    }
};
